[package]
name = "pci_access"
version = "0.0.1"
edition = "2021"
rust-version = "1.72.1"
description = "low-level PCI interface"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
num_enum = { version = "0.7.0", default-features = false }
